get the visemes going

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   </head>
   <body>
-    <button id="standButton">stand</button>
-    <button id="walkButton">walk</button>
+    <button id="standButton">string</button>
+    <button id="walkButton">number</button>
     <button id="runButton">run</button>
     <button id="speak">speak</button>
     <audio id="audioPlayback" controls autoplay>
